@@ -1,7 +1,9 @@
 package panel.property;
 
+import command.*;
+import component.Composite;
+import panel.canvas.CanvasPanel;
 import panel.canvas.ComponentSelectionListener;
-import panel.color.ColorPanel;
 import panel.color.ColorSelectionListener;
 import component.Component;
 
@@ -13,7 +15,7 @@ import java.util.List;
 public class PropertyPanel extends JPanel implements ComponentSelectionListener, ColorSelectionListener
 {
 	// 현재 선택한 컴포넌트 리스트
-	private List<Component> selectedComponents = new ArrayList<>();
+	private Composite selectedComposite = new Composite();
 	
 	private final JTextField xField = new JTextField(5);
 	private final JTextField yField = new JTextField(5);
@@ -30,6 +32,9 @@ public class PropertyPanel extends JPanel implements ComponentSelectionListener,
 	public static PropertyPanel getInstance() { return PropertyPanel.SingleInstanceHolder.INSTANCE; }
 	private static class SingleInstanceHolder { private static final PropertyPanel INSTANCE = new PropertyPanel(); }
 
+	// 캔버스 패널
+	private final CanvasPanel canvasPanel = CanvasPanel.getInstance();
+
 	// 생성자
 	private PropertyPanel()
 	{
@@ -40,7 +45,8 @@ public class PropertyPanel extends JPanel implements ComponentSelectionListener,
 		gbc.fill = GridBagConstraints.HORIZONTAL;
 		gbc.anchor = GridBagConstraints.WEST;
 		
-		// 첫 번째 행: x, y, w, h
+		/// 첫 번째 행: x, y, width, height
+
 		gbc.gridy = 0;
 		
 		gbc.gridx = 0;
@@ -63,7 +69,8 @@ public class PropertyPanel extends JPanel implements ComponentSelectionListener,
 		gbc.gridx = 7;
 		add(heightField, gbc);
 		
-		// 두 번째 행: R, G, B
+		/// 두 번째 행: R, G, B
+
 		gbc.gridy = 1;
 		
 		gbc.gridx = 0;
@@ -80,9 +87,53 @@ public class PropertyPanel extends JPanel implements ComponentSelectionListener,
 		add(new JLabel("B:"), gbc);
 		gbc.gridx = 5;
 		add(blueField, gbc);
-		
-		// 세 번째 행: z-order 버튼
+
+		/// 세 번째 행: Undo/Redo 버튼
+
 		gbc.gridy = 2;
+
+		gbc.gridx = 0;
+		gbc.gridwidth = 4;
+		JButton undoButton = new JButton("←");
+		undoButton.addActionListener(e -> canvasPanel.undo());
+		add(undoButton, gbc);
+
+		gbc.gridx = 4;
+		gbc.gridwidth = 4;
+		JButton redoButton = new JButton("→");
+		redoButton.addActionListener(e -> canvasPanel.redo());
+		add(redoButton, gbc);
+
+		// 빈 패널 및 구분선 추가
+		gbc.gridy = 3;
+
+		gbc.gridx = 0;
+		gbc.gridwidth = 8;
+		gbc.weighty = 0;
+		gbc.fill = GridBagConstraints.HORIZONTAL;
+		add(Box.createVerticalStrut(10), gbc);
+
+		gbc.gridy = 4;
+
+		gbc.gridx = 0;
+		gbc.gridwidth = 8;
+		gbc.fill = GridBagConstraints.HORIZONTAL;
+		JSeparator separator = new JSeparator(SwingConstants.HORIZONTAL);
+		separator.setForeground(Color.BLACK);
+		separator.setBackground(Color.BLACK);
+		add(separator, gbc);
+
+		gbc.gridy = 5;
+
+		gbc.gridx = 0;
+		gbc.gridwidth = 8;
+		gbc.weighty = 0;
+		gbc.fill = GridBagConstraints.HORIZONTAL;
+		add(Box.createVerticalStrut(10), gbc);
+		
+		/// 네 번째 행: z-order 버튼
+
+		gbc.gridy = 6;
 		
 		gbc.gridx = 0;
 		gbc.gridwidth = 4;
@@ -95,126 +146,137 @@ public class PropertyPanel extends JPanel implements ComponentSelectionListener,
 		add(sendToBackButton, gbc);
 		
 		// 빈 패널을 추가하여 남은 공간을 채워 상단 정렬
-		gbc.gridy = 3;
+		gbc.gridy = 7;
 		
 		gbc.gridx = 0;
 		gbc.gridwidth = 8;
 		gbc.weighty = 1.0;
 		gbc.fill = GridBagConstraints.BOTH;
 		add(new JPanel(), gbc);
+
+		/// 액션 리스너 설정
 		
 		// 각 필드에 엔터키 입력 시 액션 리스너 추가
-		xField.addActionListener(e -> changeX());
-		yField.addActionListener(e -> changeY());
-		widthField.addActionListener(e -> changeWidth());
-		heightField.addActionListener(e -> changeHeight());
-		redField.addActionListener(e -> changeRedCode());
-		greenField.addActionListener(e -> changeGreenCode());
-		blueField.addActionListener(e -> changeBlueCode());
+		xField.addActionListener(e -> {
+			Command command = new ChangeXCommand(Integer.parseInt(xField.getText()));
+			canvasPanel.executeCommand(command);
+		});
+		yField.addActionListener(e -> {
+			Command command = new ChangeYCommand(Integer.parseInt(yField.getText()));
+			canvasPanel.executeCommand(command);
+		});
+		widthField.addActionListener(e -> {
+			Command command = new ChangeWidthCommand(Integer.parseInt(widthField.getText()));
+			canvasPanel.executeCommand(command);
+		});
+		heightField.addActionListener(e ->{
+			Command command = new ChangeHeightCommand(Integer.parseInt(heightField.getText()));
+			canvasPanel.executeCommand(command);
+		});
+		redField.addActionListener(e -> {
+			Command command = new ChangeRedCodeCommand(Integer.parseInt(redField.getText()));
+			canvasPanel.executeCommand(command);
+		});
+		greenField.addActionListener(e -> {
+			Command command = new ChangeGreenCodeCommand(Integer.parseInt(greenField.getText()));
+			canvasPanel.executeCommand(command);
+		});
+		blueField.addActionListener(e -> {
+			Command command = new ChangeBlueCodeCommand(Integer.parseInt(blueField.getText()));
+			canvasPanel.executeCommand(command);
+		});
 		
 		// 선택한 컴포넌트를 제일 앞으로 보내는 버튼 액션 리스너 추가 (내부 순서 유지)
 		bringToFrontButton.addActionListener(e -> {
-			for(ChangeComponentPropertyListener listener : changeComponentPropertyListeners) {
-				listener.bringToFront();
-			}
+			Command command = new BringToFrontCommand();
+			canvasPanel.executeCommand(command);
 		});
 		
 		// 선택한 컴포넌트를 제일 뒤로 보내는 버튼 액션 리스너 추가 (내부 순서 유지)
 		sendToBackButton.addActionListener(e -> {
-			for(ChangeComponentPropertyListener listener : changeComponentPropertyListeners) {
-				listener.bringToBack();
-			}
+			Command command = new SendToBackCommand();
+			canvasPanel.executeCommand(command);
 		});
 	}
 	
 	// 선택한 컴포넌트의 x 좌표 변경 메서드
-	private void changeX()
+	public void changeX(int x)
 	{
-		// 속성값이 비어있으면 무시
-		if(xField.getText().isEmpty()) {
-			return;
-		}
-		
+		// 리스너 알림
 		for(ChangeComponentPropertyListener listener : changeComponentPropertyListeners) {
-			listener.changeX(Integer.parseInt(xField.getText()));
+			listener.changeX(x);
 		}
 	}
 	
 	// 선택한 컴포넌트의 y 좌표 변경 메서드
-	private void changeY()
+	public void changeY(int y)
 	{
-		// 속성값이 비어있으면 무시
-		if(yField.getText().isEmpty()) {
-			return;
-		}
-		
+		// 리스너 알림
 		for(ChangeComponentPropertyListener listener : changeComponentPropertyListeners) {
-			listener.changeY(Integer.parseInt(yField.getText()));
+			listener.changeY(y);
 		}
 	}
 	
 	// 선택한 컴포넌트의 width 변경 메서드
-	private void changeWidth()
+	public void changeWidth(int width)
 	{
-		// 속성값이 비어있으면 무시
-		if(widthField.getText().isEmpty()) {
-			return;
-		}
-		
+		// 리스너 알림
 		for(ChangeComponentPropertyListener listener : changeComponentPropertyListeners) {
-			listener.changeWidth(Integer.parseInt(widthField.getText()));
+			listener.changeWidth(width);
 		}
 	}
 	
 	// 선택한 컴포넌트의 height 변경 메서드
-	private void changeHeight()
+	public void changeHeight(int height)
 	{
-		// 속성값이 비어있으면 무시
-		if(heightField.getText().isEmpty()) {
-			return;
-		}
-		
+		// 리스너 알림
 		for(ChangeComponentPropertyListener listener : changeComponentPropertyListeners) {
-			listener.changeHeight(Integer.parseInt(heightField.getText()));
+			listener.changeHeight(height);
 		}
 	}
 	
-	// 선택한 컴포넌트의 red 코드 메서드
-	private void changeRedCode()
+	// 선택한 컴포넌트의 red 코드 변경 메서드
+	public void changeRedCode(int redCode)
 	{
-		// 속성값이 비어있으면 무시
-		if(redField.getText().isEmpty()) {
-			return;
-		}
-		
+		// 리스너 알림
 		for(ChangeComponentPropertyListener listener : changeComponentPropertyListeners) {
-			listener.changeRedCode(Integer.parseInt(redField.getText()));
+			listener.changeRedCode(redCode);
 		}
 	}
 	
-	// 선택한 컴포넌트의 green 코드 메서드
-	private void changeGreenCode()
+	// 선택한 컴포넌트의 green 코드 변경 메서드
+	public void changeGreenCode(int greenCode)
 	{
-		// 속성값이 비어있으면 무시
-		if(greenField.getText().isEmpty()) {
-			return;
-		}
-		
+		// 리스너 알림
 		for(ChangeComponentPropertyListener listener : changeComponentPropertyListeners) {
-			listener.changeGreenCode(Integer.parseInt(greenField.getText()));
+			listener.changeGreenCode(greenCode);
 		}
 	}
 	
-	// 선택한 컴포넌트의 blue 코드 메서드
-	private void changeBlueCode()
+	// 선택한 컴포넌트의 blue 코드 변경 메서드
+	public void changeBlueCode(int blueCode)
 	{
-		// 속성값이 비어있으면 무시
-		if(blueField.getText().isEmpty()) {
-			return;
-		}
-		
+		// 리스너 알림
 		for(ChangeComponentPropertyListener listener : changeComponentPropertyListeners) {
-			listener.changeBlueCode(Integer.parseInt(blueField.getText()));
+			listener.changeBlueCode(blueCode);
+		}
+	}
+
+	// 선택한 컴포넌트를 맨 앞으로 이동 메서드
+	public void bringToFront()
+	{
+		// 리스너 알림
+		for(ChangeComponentPropertyListener listener : changeComponentPropertyListeners) {
+			listener.bringToFront();
+		}
+	}
+
+	// 선택한 컴포넌트를 맨 뒤로 이동 메서드
+	public void sendToBack()
+	{
+		// 리스너 알림
+		for(ChangeComponentPropertyListener listener : changeComponentPropertyListeners) {
+			listener.sendToBack();
 		}
 	}
 	
@@ -225,8 +287,8 @@ public class PropertyPanel extends JPanel implements ComponentSelectionListener,
 	
 	// 선택한 컴포넌트 리스트 설정
 	@Override
-	public void selectComponents(List<Component> components) {
-		selectedComponents = components;
+	public void selectComponents(Composite composite) {
+		selectedComposite = composite;
 	}
 	
 	// 속성 출력
@@ -234,18 +296,18 @@ public class PropertyPanel extends JPanel implements ComponentSelectionListener,
 	public void displayProperty()
 	{
 		// 선택된 컴포넌트가 없다면, 무시
-		if(selectedComponents.isEmpty()) {
+		if(selectedComposite.isEmpty()) {
 			return;
 		}
 		
 		// 선택된 컴포넌트가 2개 이상이면, 속성을 출력하지 않음
-		if (selectedComponents.size() > 1) {
+		if (selectedComposite.size() > 1) {
 			clearProperties();
 			return;
 		}
 		
 		// 속성 출력
-		Component component = selectedComponents.getFirst();
+		Component component = selectedComposite.get(0);
 		xField.setText(String.valueOf(Math.min(component.getStartX(), component.getEndX())));
 		yField.setText(String.valueOf(Math.min(component.getStartY(), component.getEndY())));
 		widthField.setText(String.valueOf(component.getWidth()));
